<resources>
    <string name="app_name">HIV-e Beta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="greetText">Welcome to HIV-e, which is an application to monitor the HIV patients and provide the latest information regarding HIV.</string>
    <string name="headSplash">Hello There!</string>
    <string name="btnText">Get Started</string>
    <string name="registerBtn">Register</string>
    <string name="todo">TODO</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_in">Sign In</string>
</resources>